--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "liquidjs",
+  "name": "@reboot-ui/liquidjs",
   "version": "9.7.0",
   "description": "Liquid template engine by pure JavaScript: compatible to shopify, easy to extend.",
   "main": "dist/liquid.cjs.js",
@@ -17,7 +17,10 @@
     "coverage": "nyc --reporter=html mocha \"test/{unit,integration}/**/*.ts\"",
     "coverage-coveralls": "nyc mocha \"test/{unit,integration}/**/*.ts\" && nyc report --reporter=text-lcov | coveralls",
     "build": "rollup -c rollup.config.ts && ls -lh dist",
-    "version": "npm run build && npm run docs"
+    "version": "npm run build && npm run docs",
+    "prepublishOnly": "npm run build && npm run glog-reboot && git add -A && npm run gcommit-reboot",
+    "glog-reboot": "git changelog --tag $(git describe --tags) --stdout -p > HISTORY.reboot-ui.md",
+    "gcommit-reboot": "git commit -m\"chore(reboot-release): Release $(git describe --tags)\""
   },
   "bin": {
     "liquidjs": "./bin/liquid.js",
